# EventTracker

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
event_tracker/: __init__.py  core.py  messages.py  provider_strategy.py
event_tracker/enums/: __init__.py  auth.py  contexts.py  database.py  http.py  performance.py  tags.py
event_tracker/providers/: __init__.py  logger_provider.py  sentry_provider.py
event_tracker/strategies/: __init__.py  logger_strategy.py  sentry_strategy.py
tests/: __init__.py  conftest.py  test_contexts.py  test_core.py  test_helpers.py  test_init.py  test_init_sentry.py  test_tags.py  test_track.py
tests/providers/logger/: conftest.py  test_core.py  test_event_handler.py  test_exception_handler.py  test_message_handler.py
tests/providers/logger_provider/: conftest.py  test_contexts.py  test_initialize.py  test_tags.py  test_track.py
tests/providers/sentry/: conftest.py  test_core.py  test_exception_handler.py  test_message_handler.py
tests/providers/sentry_provider/: conftest.py  test_contexts.py  test_tags.py  test_track.py
tests/providers/sentry_provider.py/: conftest.py  test_initialize.py  test_track.py
tests/strategies/logger_strategy/: conftest.py  test_contexts.py  test_initialize.py  test_tags.py  test_track.py
tests/strategies/sentry_strategy/: conftest.py  test_contexts.py  test_initialize.py  test_tags.py  test_track.py
tracker/: __init__.py  blah.py  core.py  dtos.py  helpers.py  interfaces.py  types.py
tracker/providers/: __init__.py  logger.py  sentry.py
