[project]
name = "eventtracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel de Oliveira Chaves", email = "gabriel.chaves@maistodos.com.br"},
    {name = "Johnathan Barbosa de Araujo", email = "johnathan.araujo@maistodos.com.br"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "sentry-sdk (>=2.35.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

