[project]
name = "event_tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel de Oliveira Chaves", email = "gabriel.chaves@maistodos.com.br"},
    {name = "Johnathan Barbosa de Araujo", email = "johnathan.araujo@maistodos.com.br"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "sentry-sdk (>=2.35.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
pytest = "^8.4.1"
black = "^25.1.0"
isort = "^6.0.1"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
