[project]
name = "tracker"
version = "0.3.0"
description = ""
authors = [
    {name = "Gabriel de Oliveira Chaves", email = "gabriel.chaves@maistodos.com.br"},
    {name = "Johnathan Barbosa de Araujo", email = "johnathan.araujo@maistodos.com.br"}
]
readme = "README.md"
requires-python = ">=3.7,<4.0"
dependencies = [
    "sentry-sdk>=2.35.2,<3.0.0"
]

[tool.poetry]
name = "tracker"
version = "0.3.0"
description = ""
authors = [
    "Gabriel de Oliveira Chaves <gabriel.chaves@maistodos.com.br>",
    "Johnathan Barbosa de Araujo <johnathan.araujo@maistodos.com.br>"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
sentry-sdk = ">=2.35.2,<3.0.0"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
pytest = "^8.1.1"
black = "^24.1.0"
isort = "^5.13.2"
coverage = {version = "^6.5", python = ">=3.8"}
mutmut = "^3.1.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[tool.coverage.run]
omit = [
    "tests/*",
]

[tool.mutmut]
paths_to_mutate = ["tracker/"]
tests_dir = ["tests/"]